# vscp

./: CMakeLists.txt
src/run/vscp_client/: CMakeLists.txt  vscp_client_main.cpp  vscpclientsession.cpp  vscpclientsession.h
src/run/vscp_process/: CMakeLists.txt  vscp_process_main.cpp
src/run/vscp_server/: CMakeLists.txt  serversessionmanager.cpp  serversessionmanager.h  vscp_server_main.cpp
src/test/message_thread_test/: CMakeLists.txt  message_thread_test.cpp
src/test/task_test/: CMakeLists.txt  task_test.cpp
src/test/test_pkt_client/: CMakeLists.txt  pkt_client_main.cpp  pktclientsession.cpp  pktclientsession.h
src/test/test_pkt_server/: CMakeLists.txt  pkt_server_main.cpp  pktserversession.cpp  pktserversession.h
src/test/test_proto_client/: CMakeLists.txt  proto_client_main.cpp  vscpclientsession.cpp  vscpclientsession.h
src/test/test_proto_server/: CMakeLists.txt  proto_server_main.cpp  vscpserversession.cpp  vscpserversession.h  vscpserversessionmanager.cpp  vscpserversessionmanager.h
src/test/test_vscp_client/: CMakeLists.txt  clientsession.cpp  clientsession.h  test_client_main.cpp
src/test/test_vscp_server/: CMakeLists.txt  serversession.cpp  serversession.h  serversessionmanager.cpp  serversessionmanager.h  test_server_main.cpp
src/test/test_vzipc_client/: CMakeLists.txt  vzipc_client_main.cpp
src/test/test_vzipc_server/: CMakeLists.txt  vzipc_server_main.cpp
src/test/test_zmq_ipc_client/: CMakeLists.txt  zmq_ipc_client_main.cpp
src/test/test_zmq_ipc_server/: CMakeLists.txt  zmq_ipc_server_main.cpp
src/tmq/: CMakeLists.txt
src/tmq/base/: basictypes.h  boostincludes.h  criticalsection.h  eventwaitserver.cpp  eventwaitserver.h  messagehandler.cpp  messagehandler.h  messagequeue.cpp  messagequeue.h  socketserver.h  thread.cpp  thread.h  timeutils.cpp  timeutils.h
src/tmq/task/: basedefine.h  task.cpp  task.h
src/vscp/: CMakeLists.txt
src/vscp/base/: basicdefines.h  basictypes.h  helper.cpp  helper.h
src/vscp/net/: basesession.cpp  basesession.h  basesessionmanager.cpp  basesessionmanager.h  packettransmitter.cpp  packettransmitter.h  vscpserver.cpp  vscpserver.h  vscpservices.cpp  vscpservices.h  writehandler.h
src/vscp/proto/: baseprotoanalyzer.cpp  baseprotoanalyzer.h  clientprotoanalyzer.cpp  clientprotoanalyzer.h  protobasicdefines.h  protobasicincludes.h  serverprotoanalyzer.cpp  serverprotoanalyzer.h  vsid.cpp  vsid.h
src/vscp/vscp/: vscpbasesession.cpp  vscpbasesession.h  vscpsessionmanager.cpp  vscpsessionmanager.h
src/vzipc/: CMakeLists.txt
src/vzipc/base/: vzipcserver.cpp  vzipcserver.h
